--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "npm-run-all": "^4.1.2",
     "sharp": "^0.18.4"
+  },
+  "scripts": {
+    "clean": "rm -fr output-sharp output-vips",
+    "mkdir": "mkdir output-vips output-sharp",
+    "run-sharp": "node index.js",
+    "run-vips": "sh index.sh",
+    "start": "run-s clean mkdir run-sharp run-vips"
   }
 }
